[metadata]
name = packtrace
version = 0.1.0
author = Jerome Leclanche
author_email = jerome@leclan.ch
classifiers =
	Development Status :: 3 - Alpha
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires =
	beautifulsoup4
	python-dateutil
	requests

[flake8]
ignore = W191, E117
